force-app/main/default/objects/Term_Quote__c/fields/Dynamic_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field_Names__c</fullName>
    <description>BIZ-75350: Formula field that derives the comma-separated list of dynamic field API names from the parent SBQQ__QuoteTerm__c record. This field automatically reflects the dynamic fields referenced in the parent term body. Example: &quot;CurrencyIsoCode,MSSA_Number__c&quot;</description>
    <formula>Term__r.Dynamic_Field_Names__c</formula>
    <label>Dynamic Field Names</label>
    <type>Text</type>
</CustomField>