force-app/main/default/objects/Term_Quote__c/fields/GearsetExternalID__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalID__c</fullName>
    <label>Gearset External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>